[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resource/Font/kimberley.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Src/UI/PauseMenu/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Src/UI/MainMenu/FullScreenBox.gd" type="Script" id=3]
[ext_resource path="res://Src/UI/MainMenu/SettingPopUp.gd" type="Script" id=4]
[ext_resource path="res://Src/UI/MainMenu/VolumeSlider.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MarginContainer" parent="."]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="Menu"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Buttons" type="VBoxContainer" parent="Menu"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
alignment = 1

[node name="Resume" type="Button" parent="Menu/Buttons"]
pause_mode = 2
margin_left = 124.0
margin_top = 48.0
margin_right = 196.0
margin_bottom = 73.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="Setting" type="Button" parent="Menu/Buttons"]
pause_mode = 2
margin_left = 127.0
margin_top = 77.0
margin_right = 192.0
margin_bottom = 102.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Setting"

[node name="MainMenu" type="Button" parent="Menu/Buttons"]
pause_mode = 2
margin_left = 115.0
margin_top = 106.0
margin_right = 205.0
margin_bottom = 131.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="SettingPopUp" type="MarginContainer" parent="Menu"]
pause_mode = 2
visible = false
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -121, 35 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/SettingPopUp"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.454902, 0.643137, 0.756863, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/SettingPopUp"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="Menu/SettingPopUp/VBoxContainer"]
margin_right = 320.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Volume" type="HBoxContainer" parent="Menu/SettingPopUp/VBoxContainer"]
margin_top = 34.0
margin_right = 320.0
margin_bottom = 53.0

[node name="Control" type="Control" parent="Menu/SettingPopUp/VBoxContainer/Volume"]
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="Menu/SettingPopUp/VBoxContainer/Volume"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.0
margin_right = 79.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
text = "Volume"

[node name="Control2" type="Control" parent="Menu/SettingPopUp/VBoxContainer/Volume"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )

[node name="Slider" type="HSlider" parent="Menu/SettingPopUp/VBoxContainer/Volume"]
pause_mode = 2
margin_left = 107.0
margin_right = 207.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05
script = ExtResource( 5 )

[node name="Value" type="Label" parent="Menu/SettingPopUp/VBoxContainer/Volume"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 211.0
margin_top = 2.0
margin_right = 219.0
margin_bottom = 16.0
text = "0"

[node name="Control2" type="Control" parent="Menu/SettingPopUp/VBoxContainer"]
margin_top = 57.0
margin_right = 320.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 20 )

[node name="FullScreen" type="HBoxContainer" parent="Menu/SettingPopUp/VBoxContainer"]
margin_top = 81.0
margin_right = 320.0
margin_bottom = 105.0

[node name="Control" type="Control" parent="Menu/SettingPopUp/VBoxContainer/FullScreen"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="Menu/SettingPopUp/VBoxContainer/FullScreen"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.0
margin_top = 2.0
margin_right = 105.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 5 )
text = "Full Screen"

[node name="CheckBox" type="CheckBox" parent="Menu/SettingPopUp/VBoxContainer/FullScreen"]
pause_mode = 2
margin_left = 109.0
margin_right = 133.0
margin_bottom = 24.0
script = ExtResource( 3 )

[node name="Control3" type="Control" parent="Menu/SettingPopUp/VBoxContainer"]
margin_top = 109.0
margin_right = 320.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 40 )

[node name="Button" type="HBoxContainer" parent="Menu/SettingPopUp/VBoxContainer"]
margin_top = 153.0
margin_right = 320.0
margin_bottom = 178.0
alignment = 2

[node name="Back" type="Button" parent="Menu/SettingPopUp/VBoxContainer/Button"]
pause_mode = 2
margin_left = 248.0
margin_right = 296.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "Back"

[node name="Control" type="Control" parent="Menu/SettingPopUp/VBoxContainer/Button"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 0 )

[connection signal="pressed" from="Menu/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/Buttons/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="Menu/Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="value_changed" from="Menu/SettingPopUp/VBoxContainer/Volume/Slider" to="Menu/SettingPopUp/VBoxContainer/Volume/Slider" method="_on_value_changed"]
[connection signal="pressed" from="Menu/SettingPopUp/VBoxContainer/FullScreen/CheckBox" to="Menu/SettingPopUp/VBoxContainer/FullScreen/CheckBox" method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Menu/SettingPopUp/VBoxContainer/Button/Back" to="Menu/SettingPopUp" method="_on_Back_pressed"]
